[RED] Refactor tests